# TestDM

TestDm/: CMakeLists.txt  CMakeLists.txt.user.be35e7b  main0.cpp
build-TestDm-Desktop_Qt_6_0_0_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-TestDm-Desktop_Qt_6_0_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-0fd5ef61784a180cecbc.json  cmakeFiles-v1-a8f52534b1778f1f9fd9.json  codemodel-v2-4e22e3555049086ce125.json  index-2022-06-17T06-26-32-0916.json  target-TestDm-Debug-8ba7f0c22bdeda78cfad.json
build-TestDm-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-TestDm-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-a6fc6b3f0d0b4bc9921e.json  cmakeFiles-v1-b24080f07e40b217f1b4.json  codemodel-v2-01af5f0830ccbb2da1d9.json  index-2022-08-23T05-50-57-0190.json  target-TestDm-Debug-47029c68b7c50261d516.json
build-TestDm-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TestDm-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.718603AD91D9965E.idx  _mingw.h.953385ACFD086C84.idx  _mingw_ddk.h.D1C9A337058D3A33.idx  _mingw_directx.h.070C96D09136D388.idx  _mingw_mac.h.04ADF108E12D7B8D.idx  _mingw_off_t.h.F3A21279D1DB74B5.idx  _mingw_print_pop.h.ED0602510DF326D8.idx  _mingw_print_push.h.9FEC0E00FD288899.idx  _mingw_secapi.h.03FF7B5CF3B7B99B.idx  (+206 more)
build-TestDm-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
(+14 files in other folders)
